--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Returns a promise that resolves on the next animationFrame",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/corbt/next-frame.git"
+  },
+  "jest": {
+    "setupFiles": [
+      "jest/env.js"
+    ]
   },
   "keywords": [
     "promise",
@@ -21,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/corbt/next-frame/issues"
   },
-  "homepage": "https://github.com/corbt/next-frame#readme"
+  "homepage": "https://github.com/corbt/next-frame#readme",
+  "devDependencies": {
+    "jest": "^16.0.2"
+  }
 }
